# axii

./: Cargo.toml  README.md  im.d
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
aard/: Cargo.toml
aard/src/: function.rs  lib.rs  names_pool.rs  rtti_system.rs
axii_loader/: Cargo.toml  README.md
axii_loader/src/: lib.rs  offset.rs
axii_proxy/: Cargo.toml  README.md
axii_proxy/.cargo/: config.toml
axii_proxy/src/: lib.rs
axii_runner/: Cargo.toml  README.md
axii_runner/src/: main.rs  steam.rs
axii_sdk/: Cargo.toml
axii_sdk/src/: function.rs  lib.rs  names_pool.rs  rtti_system.rs
igni/: Cargo.toml
igni/src/: hook.rs  hook2.rs  lib.rs  module.rs  program.rs  ptr.rs  section.rs
igni_macro/: Cargo.toml
igni_macro/src/: lib.rs
roach/: Cargo.toml
roach/src/: lib.rs  names_pool.rs  rtti_system.rs
src/: lib.rs  plugin.rs  registry.rs
