[package]
name = "axii"
version = "0.1.0"
edition = "2021"

[lib]
name = "dinput8"
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.57.0"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Environment",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
]

[profile.release]
codegen-units = 1
strip = true
lto = true
