[package]
name = "axii_loader"
version = "0.1.0"
edition = "2021"

[lib]
name = "axii"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
igni = { path = "../igni" }

[dependencies.windows]
version = "0.57.0"
features = [
  "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_System_Diagnostics_Debug",
]
